--- a/calculator.html
+++ b/calculator.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="jquery-3.1.1.min.js"></script>
-    <script src="calculator.js" type="text/javascript"></script>
-    <link href="calculator_style.css" rel="stylesheet">
+    <script src="js/calculator.js" type="text/javascript"></script>
+    <link href="css/calculator_style.css" rel="stylesheet">
 </head>
 <body>
     <div id="calculator">
@@ -42,7 +42,7 @@
                 <tr>
                     <td><button type="button" name="clear">C</button></td>
                     <td><button type="button" name="num" id=".">.</button></td>
-                    <td><button type="button" name="del"><img src="delete.png"/></button></td>
+                    <td><button type="button" name="del"><img src="image/delete.png"/></button></td>
                     <td><button type="button" name="equal">=</button></td>
                 </tr>
             </tbody>
