--- a/calculator.html
+++ b/calculator.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="jquery-3.1.1.min.js"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/calculator.js" type="text/javascript"></script>
     <link href="css/calculator_style.css" rel="stylesheet">
 </head>
